--- a/src/UGizmo/Assets/Scripts/UGizmo/UGizmo.asmdef
+++ b/src/UGizmo/Assets/Scripts/UGizmo/UGizmo.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "UGizmos",
+    "name": "UGizmo",
     "rootNamespace": "",
     "references": [
         "GUID:2665a8d13d1b3f18800f46e256720795",
