--- a/src/UGizmo/Packages/manifest.json
+++ b/src/UGizmo/Packages/manifest.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "com.codewriter.triinspector": "https://github.com/codewriter-packages/Tri-Inspector.git",
     "com.unity.collab-proxy": "2.2.0",
+    "com.unity.collections": "2.1.4",
     "com.unity.ide.rider": "3.0.27",
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.ide.vscode": "1.2.5",
