--- a/src/UGizmo/Assets/UGizmo/Samples~/Benchmark/UGizmo.Benchmark.asmdef
+++ b/src/UGizmo/Assets/UGizmo/Samples~/Benchmark/UGizmo.Benchmark.asmdef
@@ -4,7 +4,29 @@
     "references": [
         "GUID:c1e10642d7fcc6b41bab01db03480669"
     ],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Android",
+        "Editor",
+        "EmbeddedLinux",
+        "GameCoreScarlett",
+        "GameCoreXboxOne",
+        "iOS",
+        "LinuxStandalone64",
+        "CloudRendering",
+        "macOSStandalone",
+        "PS4",
+        "PS5",
+        "QNX",
+        "Stadia",
+        "Switch",
+        "tvOS",
+        "WSA",
+        "VisionOS",
+        "WebGL",
+        "WindowsStandalone32",
+        "WindowsStandalone64",
+        "XboxOne"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
