--- a/src/UGizmo/Assets/UGizmo/package.json
+++ b/src/UGizmo/Assets/UGizmo/package.json
@@ -2,7 +2,7 @@
   "name": "com.harumaro.ugizmo",
   "version": "1.0.0",
   "displayName": "UGizmo",
-  "description": "Highly efficient gizmo renderer for Unity.",
+  "description": "Highly efficient gizmo drawer for Unity.",
   "keywords": [
     "gizmo",
     "debug"
