--- a/src/UGizmo/Assets/UGizmo/package.json
+++ b/src/UGizmo/Assets/UGizmo/package.json
@@ -1,6 +1,7 @@
 {
   "name": "com.harumaro.ugizmo",
   "version": "1.0.1",
+  "unity": "2021.3",
   "displayName": "UGizmo",
   "description": "Highly efficient gizmo drawer for Unity.",
   "keywords": [
